syntax = "proto3";

package toServerSubscribe;

option go_package = "./protocol/toServer/respNetSvrStatus;respNetSvrStatus";

//返回网关的状态
message RespNetSvrStatus {
  //自定义的cmd，网关会原样回传给工作进程
  int32 cmd = 1;
  //网关中的客户连接数
  int32 customerConnCount = 2;
  //网关中的主题数量
  int32 topicCount = 3;
  //等待转发到客户的数据量
  int32 catapultWaitSendCount = 4;
  //用户于发送数据给客户的协程数量
  int32 catapultConsumer = 5;
  //等待发送给客户数据的缓冲区的大小
  int32 CatapultChanCap = 6;
}